--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -43,6 +43,7 @@
 @import components/ui-containers
 @import components/ui-drop-menus
 @import components/ui-form-group
+@import components/ui-info-box
 @import components/ui-metadata-box
 @import components/ui-modals
 @import components/ui-preloaders
