--- a/app/assets/stylesheets/combos/_ui-resources-table.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-table.sass
@@ -5,12 +5,13 @@
 
 .ui-resources-table
   .ui-thumbnail.micro
-    margin: 0 $space-x $space-x
+    margin: $space-x $space-x $space-x $space-s
   table
     table-layout: fixed
     width: 100%
-    td
+    td, th
       vertical-align: middle
+      border-bottom: 1px solid $grey-mid-light
   tbody
     color: $grey-mid
     font-size: $font-s
