--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -10,6 +10,7 @@
   list-style: none outside none
   margin: 2px 0 0
   max-height: 300px
+  max-width: 600px
   min-width: 160px
   overflow-y: auto
   padding: 5px 0
