--- a/app/assets/stylesheets/components/_ui-form-group.sass
+++ b/app/assets/stylesheets/components/_ui-form-group.sass
@@ -34,6 +34,9 @@
   &.compact
     margin-bottom: -$space-s
     padding: $space-s $space-x
+  &.minimal
+    margin-bottom: 0
+    padding: 0
 
 .ui-form-group .ui-form-ui-ttip-toggle
   @extend .icon-question-mark
