--- a/app/assets/stylesheets/general/_forms.sass
+++ b/app/assets/stylesheets/general/_forms.sass
@@ -60,7 +60,8 @@ input.large
   padding: 3px 0
 
 input.small
-  line-height: $line-height-xs
+  font-size: $font-s
+  padding: 3px 5px
 
 /* State variations
  *-----------------------------------------
