--- a/app/assets/stylesheets/general/_typography.sass
+++ b/app/assets/stylesheets/general/_typography.sass
@@ -56,6 +56,11 @@ h1, h2, h3, h4, h5, h6
   font-weight: 600
   line-height: $line-height-m
 
+.title-s-alt
+  font-size: $font-s
+  font-weight:  bold
+  line-height: $line-height-m
+
 .title-xs
   font-size: $font-xs
   font-weight: 700
@@ -66,6 +71,9 @@ h1, h2, h3, h4, h5, h6
   color: $grey-mid
   font-size: $font-xs
   line-height: $line-height-l
+
+.capitilize
+  text-transform: capitalize
 
 /**
  * ## Paragraphs `p`
@@ -129,3 +137,4 @@ ol
 ol li
   list-style-type: decimal
   list-style-position: inside
+
