--- a/app/views/styleguide/2 Typography/_typography.html
+++ b/app/views/styleguide/2 Typography/_typography.html
@@ -80,6 +80,10 @@
         <div style="">  <h1 class="title-s">This is a rather long title that might go onto two lines</h1></div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
+        <span class="sg-modifier-name">.title-s-alt</span>
+        <div style="">  <h1 class="title-s-alt">This is a rather long title that might go onto two lines</h1></div>
+      </div>
+      <div class="align-left bg-light sg-canvas sg-modifier">
         <span class="sg-modifier-name">.title-xs</span>
         <div style="">  <h1 class="title-xs">This is a rather long title that might go onto two lines</h1></div>
       </div>
@@ -100,7 +104,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="2.2">
     <h3>
       <a href="#2.2">2.2</a>
@@ -139,7 +143,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="2.3">
     <h3>
       <a href="#2.3">2.3</a>
@@ -185,7 +189,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="2.4">
     <h3>
       <a href="#2.4">2.4</a>
@@ -231,7 +235,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="2.5">
     <h3>
       <a href="#2.5">2.5</a>
