--- a/app/views/styleguide/6 Components/_components.html
+++ b/app/views/styleguide/6 Components/_components.html
@@ -131,7 +131,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.2">
     <h3>
       <a href="#6.2">6.2</a>
@@ -236,7 +236,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.3">
     <h3>
       <a href="#6.3">6.3</a>
@@ -297,7 +297,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.4">
     <h3>
       <a href="#6.4">6.4</a>
@@ -396,7 +396,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.5">
     <h3>
       <a href="#6.5">6.5</a>
@@ -410,7 +410,7 @@
       <div class="align-left bg-light sg-canvas">
         <div style="">
           <div class="ui-resources-header">
-            <h2 class="title-l ui-resources-title">A filter 
+            <h2 class="title-l ui-resources-title">A filter
             <div class="button-group small">
               <button class="button active">Alle</button>
               <button class="button">Medienträge</button>
@@ -423,7 +423,7 @@
       </div>
       <div class="sg-html">
         <pre class="prettyprint lang-html">&lt;div class="ui-resources-header"&gt;
-&lt;h2 class="title-l ui-resources-title"&gt;A filter 
+&lt;h2 class="title-l ui-resources-title"&gt;A filter
 &lt;div class="button-group small"&gt;
   &lt;button class="button active"&gt;Alle&lt;/button&gt;
   &lt;button class="button"&gt;Medientr&amp;auml;ge&lt;/button&gt;
@@ -435,7 +435,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.6">
     <h3>
       <a href="#6.6">6.6</a>
@@ -472,7 +472,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.7">
     <h3>
       <a href="#6.7">6.7</a>
@@ -551,7 +551,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.8">
     <h3>
       <a href="#6.8">6.8</a>
@@ -617,7 +617,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.9">
     <h3>
       <a href="#6.9">6.9</a>
@@ -642,7 +642,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.10">
     <h3>
       <a href="#6.10">6.10</a>
@@ -798,7 +798,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.11">
     <h3>
       <a href="#6.11">6.11</a>
@@ -818,7 +818,7 @@ Loading in progress
     <div class="sg-canvases">
       <div class="align-left bg-light sg-canvas">
         <div style="padding-top: 100px;margin: 0 auto;padding-right: 150px;padding-bottom: 100px;padding-left: 150px">
-          
+
           <div class="dropdown ui-dropdown $modifier-class">
             <a class="dropdown-toggle ui-drop-toggle" data-toggle="dropdown" href="#">Drop-down Toggle</a>
             <ul class="dropdown-menu ui-drop-menu" role="menu" aria-labelledby="dLabel">
@@ -828,7 +828,7 @@ Loading in progress
               <li class="ui-drop-item"><a href="#">Item 3</a></li>
             </ul>
           </div>
-          
+
           <div class="dropdown ui-dropup $modifier-class">
             <a class="dropdown-toggle ui-drop-toggle" data-toggle="dropdown" href="#">Drop-up Toggle</a>
             <ul class="dropdown-menu ui-drop-menu" role="menu" aria-labelledby="dLabel">
@@ -843,7 +843,7 @@ Loading in progress
       <div class="align-left bg-light sg-canvas sg-modifier">
         <span class="sg-modifier-name">.stick-right</span>
         <div style="padding-top: 100px;margin: 0 auto;padding-right: 150px;padding-bottom: 100px;padding-left: 150px">
-          
+
           <div class="dropdown ui-dropdown stick-right">
             <a class="dropdown-toggle ui-drop-toggle" data-toggle="dropdown" href="#">Drop-down Toggle</a>
             <ul class="dropdown-menu ui-drop-menu" role="menu" aria-labelledby="dLabel">
@@ -853,7 +853,7 @@ Loading in progress
               <li class="ui-drop-item"><a href="#">Item 3</a></li>
             </ul>
           </div>
-          
+
           <div class="dropdown ui-dropup stick-right">
             <a class="dropdown-toggle ui-drop-toggle" data-toggle="dropdown" href="#">Drop-up Toggle</a>
             <ul class="dropdown-menu ui-drop-menu" role="menu" aria-labelledby="dLabel">
@@ -888,7 +888,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.12">
     <h3>
       <a href="#6.12">6.12</a>
@@ -929,7 +929,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.13">
     <h3>
       <a href="#6.13">6.13</a>
@@ -974,7 +974,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.14">
     <h3>
       <a href="#6.14">6.14</a>
@@ -1061,7 +1061,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.15">
     <h3>
       <a href="#6.15">6.15</a>
@@ -1088,7 +1088,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.16">
     <h3>
       <a href="#6.16">6.16</a>
@@ -1175,7 +1175,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.17">
     <h3>
       <a href="#6.17">6.17</a>
@@ -1209,7 +1209,7 @@ Loading in progress
               <span class="ui-thumbnail-meta-extension">500</span>
             </div>
           </div>
-          
+
           <div class="ui-thumbnail media-catalog">
             <div class="ui-thumbnail-privacy">
               <i class="icon-privacy-open">This media is Public</i>
@@ -1280,7 +1280,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.18">
     <h3>
       <a href="#6.18">6.18</a>
@@ -1303,7 +1303,7 @@ Loading in progress
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="6.19">
     <h3>
       <a href="#6.19">6.19</a>
@@ -1360,7 +1360,7 @@ Loading in progress
               </div>
             </div>
           </div>
-          
+
           <div class="ui-thumbnail filter-set">
             <div class="ui-thumbnail-level-up-items">
               <span class="ui-thumbnail-level-notes">Keine übergeordneten Sets</span>
@@ -1426,7 +1426,7 @@ Loading in progress
               <span class="ui-thumbnail-level-notes">5 Inhalte</span>
             </div>
           </div>
-          
+
           <div class="ui-thumbnail media-set">
             <div class="ui-thumbnail-level-up-items">
               <span class="ui-thumbnail-level-notes">Keine übergeordneten Sets</span>
@@ -1492,7 +1492,7 @@ Loading in progress
               <span class="ui-thumbnail-level-notes">5 Inhalte</span>
             </div>
           </div>
-          
+
             <div class="ui-resource-thumbnail">
               <div class="ui-thumbnail media-entry video">
                 <div class="ui-thumbnail-privacy">
@@ -1537,7 +1537,7 @@ Loading in progress
                 </div>
               </div>
             </div>
-          
+
           </div>
         </div>
       </div>
@@ -1766,9 +1766,9 @@ Loading in progress
 
 &lt;/div&gt;</pre>
       </div>
-    
+
   </section>
-  
+
   <section class="sg-example" id="6.20">
     <h3>
       <a href="#6.20">6.20</a>
@@ -1784,6 +1784,37 @@ Loading in progress
       </div>
       <div class="sg-html">
         <pre class="prettyprint lang-html">&lt;a class="ui-ttip-toggle" title="Tooltip Text"&gt;Tooltip toggle&lt;/a&gt;</pre>
+      </div>
+    </div>
+  </section>
+</section>
+
+  <section class="sg-example" id="6.21">
+    <h3>
+      <a href="#6.21">6.21</a>
+    </h3>
+    <div class="sg-description">
+      <span class="sg-filename">_ui-info-box.scss</span>
+      <h2>Info Box <code>.ui-info-box</code></h2>
+    </div>
+    <div class="sg-canvases">
+      <div class="align-left bg-light sg-canvas">
+        <div>
+
+          <div class="ui-info-box">
+            <h2 class="title-l ui-info-box-title">
+              Verantwortliche Person
+            </h2>
+            <p class="ui-info-box-intro">
+              Nunc eu ullamcorper orci. Quisque ac lectus vestibulum faucibus eget in metus:
+            </p>
+            <ul class="ui-tag-cloud">
+              <li class="ui-tag-button person-tag">Normalo, Normin
+              </li>
+            </ul>
+          </div>
+
+        </div>
       </div>
     </div>
   </section>
