--- a/app/assets/stylesheets/components/_ui-custom-select.sass
+++ b/app/assets/stylesheets/components/_ui-custom-select.sass
@@ -7,12 +7,15 @@
     position: absolute
     top: 0
     left: 0
+    width: 100%
+    box-sizing: border-box
   .ui-custom-select-text
     overflow: hidden
     text-overflow: ellipsis
     white-space: nowrap
     width: 90%
     float: left
+    line-height: 1.7em
   &.disabled .ui-custom-select-text
     width: 100%
   i
@@ -22,3 +25,5 @@
   &.disabled, &.disabled:hover, &.disabled:active
     background: none
     border: none
+    padding-left: 0
+    text-align: left
