--- a/app/assets/stylesheets/general/_tables.sass
+++ b/app/assets/stylesheets/general/_tables.sass
@@ -4,24 +4,25 @@
  * .borderless    - Borderless tables
  * .block         - Full width table
  *
- * Styleguide 2.5
+ * Styleguide 2.5 */
 
 table.block
   width: 100%
 
 thead td, thead th
-  border-bottom: 1px solid $grey-mid-light
+  border-bottom: 1px solid $grey-light
   font-size: $font-xs
   font-weight: 700
 
 thead td span, thead th span
   font-weight: 700
+  border-bottom
 
 tfoot td
   font-size: $font-xs
 
 caption
-  border-bottom: 1px solid $grey-mid-light
+  border-bottom: 1px solid $grey-light
   font-weight: 700
   line-height: $line-height-m
   padding: $space-x 0
@@ -33,14 +34,14 @@ td, th
   padding: $space-x 0
   vertical-align: top
 
-tr:last-child td
-  border-bottom: none
+// tbody tr:last-child td
+//   border-bottom: none
 
-.midtone td
-  border-color: $grey-mid-light
+// .midtone td
+//   border-color: $grey-mid-light
 
 /* Borderless Tables
- *-----------------------------------------
+ *----------------------------------------- */
 
 .borderless
   td,
