Renaming things w.r.t. permissions with Susanne

--- a/app/views/permissions/edit.html.haml
+++ b/app/views/permissions/edit.html.haml
@@ -15,8 +15,8 @@
             - else
               Berechtigungen für #{@media_resources.count}
               - if @media_resources.count != @all_media_resources.count
-                aus #{@all_media_resources.count}
-              Inhalte
+                von #{@all_media_resources.count}
+              Inhalten
 
         - case @action
         - when :edit
@@ -98,7 +98,7 @@
                   - if @viewable_media_resources.count > 1 or @viewable_media_resources.count == 0
                     %a.link.weak{href: my_dashboard_path}= _"My archive"
                   - if @viewable_media_resources.count == 1
-                    %a.link.weak{href: media_resource_path(@viewable_media_resources.first)}= _"Current entry"
+                    %a.link.weak{href: media_resource_path(@viewable_media_resources.first)}= "Ausgewählter Inhalt" 
 
 
   .app-footer-push
